--- a/titanic_model.ipynb
+++ b/titanic_model.ipynb
@@ -6,7 +6,7 @@
       "name": "titanic-model.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNhFrtC0KomWabIe2J7SuQX",
+      "authorship_tag": "ABX9TyNIYEfJxLFrnGXXW0OVDKmm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -532,13 +532,13 @@
         "\n",
         "preds = model_rf.predict(test)\n",
         "test_accuracy = metrics.accuracy_score(test_target, preds)\n",
-        "print('[Random Forest]: Accuratezza Fase di Test: ', test_accuracy)\n",
+        "print('[Random Forest]: Test Accuracy {}'.format(test_loss, test_accuracy))\n",
         "metrics.plot_confusion_matrix(model_rf, test, test_target, normalize='all')\n",
         "plt.show()\n",
         "\n",
         "preds = model_dt.predict(test)\n",
         "test_accuracy = metrics.accuracy_score(test_target, preds)\n",
-        "print('[Decision Tree]: Accuratezza Fase di Test: ', test_accuracy)\n",
+        "print('[Decision Tree]: Test Accuracy {}'.format(test_loss, test_accuracy))\n",
         "metrics.plot_confusion_matrix(model_rf, test, test_target, normalize='all')\n",
         "plt.show()"
       ],
